# learnopengl

1_FirstTriangle/: main.cpp
2_Shader/: CMakeLists.txt  conanfile.txt  main.cpp
3_Texture/: CMakeLists.txt  conanfile.txt  main.cpp
4_Camera/: CMakeLists.txt  main.cpp
5_ShallowEncapsulate/: CMakeLists.txt  README.md  conanfile.txt
5_ShallowEncapsulate/src/: CMakeLists.txt  main.cpp
5_ShallowEncapsulate/src/Core/: Assert.h  Base.h  Log.cpp  Log.h
5_ShallowEncapsulate/src/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLRenderContext.cpp  OpenGLRenderContext.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertextArray.cpp  OpenGLVertextArray.h
5_ShallowEncapsulate/src/Window/: Window.cpp  Window.h  Windown.h
5_ShallowEncapsulate/src/Window/Events/: AppEvents.h  Event.h  KeyCodes.h  KeyEvent.h  MouseCodes.h  MouseEvent.h  WindowEvents.h
camera/: main.cpp  vertexShader.vs
